<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_shape_back"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/editTitle_AddPayWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/card_shape_front"
        android:gravity="center"
        android:text="@string/add_header"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/card_shape_front"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearlayout_beginDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textDialogWeek_Beginning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/begin_day"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editDialogWeek_Beginning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:ems="10"
                android:gravity="right"
                android:inputType="none" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout_endDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textDialogWeek_Ending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/end_day"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editDialogWeek_Ending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:ems="10"
                android:gravity="right"
                android:inputType="none" >
                <requestFocus />
            </EditText>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancel_PayPeriod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/light_blue_button"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnSave_PayPeriod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/light_blue_button"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>