<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_shape_back"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/editTitle_TimePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/card_shape_front"
        android:gravity="center"
        android:text="@string/time_picker_header"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:background="@drawable/card_shape_front" >

        <TimePicker
            android:id="@+id/hoursTimePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="3dp"
            android:paddingRight="3dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="2dp" >

        <Button
            android:id="@+id/btnCancel_Time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/light_blue_button"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnSave_Time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/light_blue_button"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>